--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,16 +1,22 @@
-<style>
-	.hidden {
-		visibility: hidden;
-	}
-</style>
-
 <h2>Todo Lists</h2>
 
 <div id="lists">
 
 </div>
 
-<%= button_to "Make New List", new_todo_list_url, :method => :get %>
+<h4>Make a New List</h4>
+
+<%= form_for(@todo_list,
+	:remote => true,
+	:format => :json,
+	:html => { :id => "new_list_form" }) do |f| %>
+	<%= f.label :title, "List Title" %>
+	<%= f.text_field :title %>
+	<br>
+
+	<%= f.submit %>
+<% end %>
+
 
 <script type="application/json" id="all_lists">
 	<%= @todo_lists.to_json(:include => :items).html_safe %>
@@ -20,38 +26,50 @@
 
 <script type="text/javascript">
 	$(function() {
-		var tasks = JSON.parse($('#all_lists').html());
+		TASKS = $('#all_lists').html();
 		var list_div = $('#lists');
-		_.each(tasks, function(list, i) {
+		
+
+		function render(tasks) {
+			var tasks = JSON.parse(tasks);
+			_.each(tasks, function(list, i) {
+				var $p = $('<p></p>');
+				var list_link = $('<a href="#">' + list.title + '</a>');
+				list_link.attr('id', 'list_' + i);
+				$p.html(list_link);
+				list_div.append($p);
+
+				var templateCode = $("#list_items").html();
+				var templateFunction = _.template(templateCode);
+				var renderedTemplate = templateFunction({
+					items: list.items
+				});
+				$p.append(renderedTemplate);
+				$p.find('ul').hide();
+				$('#list_' + i).click(function () {
+					console.log(this);
+					$p.find('ul').toggle('slow');
+				});
+			});
+		}
+
+		render(TASKS);
+
+		$("#new_list_form").on('ajax:success', function(event, data) {
 			var $p = $('<p></p>');
-			var list_link = $('<a href="#">' + list.title + '</a>');
-			list_link.attr('id', 'list_' + i);
+			var list_link = $('<a href="#"></a>');
+			list_link.attr('id', 'list_' + (JSON.parse(TASKS).length))
+			list_link.text(data.title);
 			$p.html(list_link);
-			list_div.append($p);
-
-			var templateCode = $("#list_items").html();
-			var templateFunction = _.template(templateCode);
-			var renderedTemplate = templateFunction({
-				items: list.items
-			});
-			// $p.find('ul').remove();
-			$p.append(renderedTemplate);
-			$p.find('ul').hide();
-			$('#list_' + i).click(function () {
-				console.log(this);
-				$p.find('ul').toggle('slow');
-			});
-			
-
-			// $('#list_' + i).click(function () {
-			// 	var templateCode = $("#list_items").html();
-			// 	var templateFunction = _.template(templateCode);
-			// 	var renderedTemplate = templateFunction({
-			// 		items: list.items
-			// 	});
-			// 	$p.find('ul').remove();
-			// 	$p.append(renderedTemplate);
-			// });
+			$('#lists').append($p);
+			parsed_tasks = JSON.parse(TASKS);
+			parsed_tasks.push(data);
+			obj_string = JSON.stringify(parsed_tasks);
+			TASKS = obj_string;
 		});
 	});
+</script>
+
+<script type="text/javascript">
+	
 </script>
