was kidding before, now they actually work

--- a/app/views/todo_lists/_show.html
+++ b/app/views/todo_lists/_show.html
@@ -1,4 +1,4 @@
-<script type="text/text" id="list_items">
+<script type="text/template" id="list_items">
 	<ul>
 		<% _.each(items, function(item, idx) { %>
 			<li>
