new lists have delete buttons

--- a/app/views/todo_lists/_render_list_links.html
+++ b/app/views/todo_lists/_render_list_links.html
@@ -1,4 +1,4 @@
-<script type="text/template" id="current_lists">
+<script type="text/template" id="list_links">
 	<a href="#"><%= list.title %></a> | <a href="#" class="list_obliterator">delete</a>
 </script>
 
