cleanup new list form after creation; add comments

--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -39,6 +39,7 @@
 		var list_div = $('#lists');
 		
 
+		// assemble current lists for insertion
 		function render(tasks) {
 			var tasks = JSON.parse(tasks);
 			_.each(tasks, function(list, i) {
@@ -66,13 +67,16 @@
 			});
 		}
 
+		// show all current lists
 		render(TASKS);
 
+		// toggle item showing for lists
 		list_div.on('click', 'p a:first-child', function () {
 			event.preventDefault();
 			$(this).parent().find('ul').toggle('slow');
 		});
 
+		// deletion handlers
 		list_div.on('click', 'a.item_obliterator', function() {
 			event.preventDefault();
 			var item = $(this).parent();
@@ -89,6 +93,7 @@
 			list.remove();
 		});
 
+		// deletion functions
 		function ItemObliterator(item) {
 			var itemId = item.attr('id');
 			var url = '/todo_items/' + itemId;
@@ -103,8 +108,9 @@
 			$.post(url, { "_method": "delete" });
 		}
 
+		// handler for new list form submission
 		$("#new_list_form").on('ajax:success', function(event, data) {
-			// new code
+			// make a new set of links
 			var listTempCode = $("#list_links").html();
 			var listTempFn = _.template(listTempCode);
 			var renderedListTemp = listTempFn({
@@ -118,14 +124,7 @@
 			$p.children('a:first-child').attr('id', 'list_' + (JSON.parse(TASKS).length));
 			$('#lists').append($p);
 
-			// old code
-			// var $p = $('<p></p>');
-			// var list_link = $('<a href="#"></a>');
-			// list_link.attr('id', 'list_' + (JSON.parse(TASKS).length));
-			// list_link.text(data.title);
-			// $p.html(list_link);
-			// $('#lists').append($p);
-
+			// add items to the list
 			var templateCode = $("#list_items").html();
 			var templateFunction = _.template(templateCode);
 			var renderedTemplate = templateFunction({
@@ -135,12 +134,19 @@
 			$p.append(renderedTemplate);
 			$p.find('ul').hide();
 
+			// clean up the form
+			$(this).find("[type=text]").val("");
+			$("#add_list_items").children("[type=text]").not('input:first-child').remove();
+			$("#add_list_items").children('br').not('br:first-child').remove();
+
+			// add new data to bootstrap
 			parsed_tasks = JSON.parse(TASKS);
 			parsed_tasks.push(data);
 			obj_string = JSON.stringify(parsed_tasks);
 			TASKS = obj_string;
 		});
 
+		// add additional item inputs to the new list form
 		$("#another_item").click(function () {
 			event.preventDefault();
 			var addItemCode = $("#add_item_field").html();
@@ -148,7 +154,5 @@
 			var renderedItem = addItemFunction();
 			$("#add_list_items").append(renderedItem);
 		});
-
-
 	});
 </script>
